k8s/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sql
  template:
    metadata:
      labels:
        component: sql
    spec:
      volumes:
        - name: sql-storage # Just allocates storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: sql
          image: mariadb # https://hub.docker.com/_/mariadb/
          ports: # The mariadb image exposes port 3306
            - containerPort: 3306
          volumeMounts:
            - name: sql-storage # Chooses which volume to use (referred to by the name on line 16)
              mountPath: /var/lib/mysql/data # I think mariadb by default uses /var/lib/mysql, so have added a /data directory
          env: # Set the necessary environment variables for the database
            - name: MYSQL_ROOT_PASSWORD # info at https://hub.docker.com/_/mariadb/
              valueFrom: # This accesses an encoded secret that has already been created
                secretKeyRef:
                  name: pgpassword # Comes from the command :  kubectl create secret generic pgpassword --from-literal MYPASSWORD='insert password here'
                  key: MYPASSWORD # This is the key, that also comes from the command above
            - name: MYSQL_USER # Name of the root user
              value: gradapp
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pgpassword # Same as above. Could have a different root password?
                  key: MYPASSWORD
            - name: MYSQL_DATABASE
              value: gradapp # name of the schema
            - name: MYSQL_ROOT_HOST
              value: sql-cluster-ip-service # Name defined on line 4 of sql-cluster-ip-service.yaml
            - name: MYSQL_PORT
              value: "3306"
