k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports: # Maps port 8080 to port 8080 in the container
    - port: 8080
      targetPort: 8080
