k8s/sql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: sql
  ports:
    - port: 3306
      targetPort: 3306
